--- a/templates/modules.html
+++ b/templates/modules.html
@@ -14,6 +14,7 @@
     </div>
     <div class="tp-header__right">
       <a class="tp-btn tp-btn--primary" href="/automaton">⚙ יצירת אוטומט</a>
+      <a class="tp-btn" href="/pda">📦 אוטומט מחסנית (PDA)</a>
     </div>
   </header>
 
